Opened 15 years ago

Closed 14 years ago

#6126 closed bug (fixed)

Fontdemo debug message fix

Reported by: Karvjorm Owned by: nobody
Priority: normal Milestone: R1
Component: Applications Version: R1/alpha2
Keywords: Fontdemo Family change debug Cc: Karvjorm
Blocked By: Blocking:
Platform: All

Description

Fontdemo is trying to print the new Font main family when it is changed. But it does not print it correct. I have tried to fix that here. I wonder, if submenu changes should be printed also?

Attachments (1)

fontdemoDebugMsg.patch (3.8 KB ) - added by Karvjorm 15 years ago.
An updated Fontdemo debug message fix (added dbg messages for the other buttons too)

Download all attachments as: .zip

Change History (4)

comment:1 by Karvjorm, 15 years ago

patch: 01

by Karvjorm, 15 years ago

Attachment: fontdemoDebugMsg.patch added

An updated Fontdemo debug message fix (added dbg messages for the other buttons too)

comment:2 by leavengood, 14 years ago

I applied the patch in hrev40086. Thanks and sorry for the delay!

comment:3 by leavengood, 14 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.