Apply patch from Karvjorm for #6126 to add console messages from FontDemo.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40086 a95241bf-73f2-0310-859d-f6bbb57e9c96